# scrape-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: dependabot-automerge.yml  release.yml
crates/scrape-core/: Cargo.toml
crates/scrape-core/benches/: parse.rs
crates/scrape-core/benches/samples/: medium.html
crates/scrape-core/src/: error.rs  lib.rs  soup.rs  tag.rs
crates/scrape-core/src/dom/: mod.rs
crates/scrape-core/src/parser/: mod.rs
crates/scrape-core/src/query/: mod.rs
crates/scrape-node/: Cargo.toml  README.md  index.d.ts  package.json
crates/scrape-node/npm/darwin-arm64/: package.json
crates/scrape-node/npm/darwin-x64/: package.json
crates/scrape-node/npm/linux-arm64-gnu/: package.json
crates/scrape-node/npm/linux-arm64-musl/: package.json
crates/scrape-node/npm/linux-x64-gnu/: package.json
crates/scrape-node/npm/linux-x64-musl/: package.json
crates/scrape-node/npm/win32-x64-msvc/: package.json
crates/scrape-node/src/: lib.rs
crates/scrape-py/: Cargo.toml  pyproject.toml
crates/scrape-py/python/scrape_rs/: __init__.py  __init__.pyi
crates/scrape-py/src/: lib.rs
crates/scrape-wasm/: Cargo.toml  package.json
crates/scrape-wasm/js/: index.d.ts
crates/scrape-wasm/src/: lib.rs
crates/scrape-wasm/tests/: web.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
